[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Turrets/LaserBeamTurret.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/LaserBeam/5.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/LaserBeam/4.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/LaserBeam/1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/LaserBeam/2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/LaserBeam/3.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Shoot",
"speed": 30.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "PrepShoot",
"speed": 1.0
} ]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.43082, 4.55833 )

[node name="LaserBeamTurret" type="StaticBody2D"]
position = Vector2( 60, 80 )
collision_layer = 32
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.496166, 4.0242 )
frames = SubResource( 1 )
animation = "Shoot"

[node name="Muzzle" type="Position2D" parent="."]

[node name="Line2D" type="Line2D" parent="."]
material = SubResource( 2 )
points = PoolVector2Array( 0, 0, 0, -50 )
default_color = Color( 1, 0, 0, 1 )
texture_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.00595097, 1.62995 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 64

[node name="Line2D_Collision" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 4.96315, -0.265572 )
polygon = PoolVector2Array( 0, 0, -10, 0, -10, 0 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0, -20 )
scale = Vector2( 1, 3 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
